--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -10,23 +10,31 @@
 <body>
 	<!-- Header -->
 		<!-- Logo -->
-		<a href=""><img src="static/logo_switchtocode.png"></a>
-		<!-- Website link -->
-		<h2><a href="">blog.codingninjas.in</a></h2>
-		<!-- Header image -->
-		<img src="static/coding_ninjas.png">
+
+		<div>
+			<a href=""><img src="static/logo_switchtocode.png"></a>
+			<!-- Website link -->
+			<h2><a href="">blog.codingninjas.in</a></h2>
+			<!-- Header image -->
+			<img src="static/coding_ninjas.png">
+		</div>
 	<!-- Main blog content -->
 		<!-- Blog Heading -->
-		<h1>Five Tips for front-end web development</h1>
-		<!-- Blog Image -->
-		<img src="static/Five-tips-for-front-end-web-development.jpg" height="400px" width="60%" alt="Five Tips">
+
+		<div>
+			<h1>Five Tips for front-end web development</h1>
+			<!-- Blog Image -->
+			<img src="static/Five-tips-for-front-end-web-development.jpg" height="400px" width="60%" alt="Five Tips">
+		</div>
+
+		<!-- Content -->
+			<!-- Para-1 -->
+			<!-- Para-2 -->
 		<p>Don’t     you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems!</p>
 
 		<!-- <br>	 -->
 		<p>However, it is not impossible either. Here are five tips that’ll help you get better in front-end design and web development.</p>
-		<!-- Content -->
-			<!-- Para-1 -->
-			<!-- Para-2 -->
+		
 			<!-- Lists -->
 			<ol>
 				<li>
